--- a/.github/workflows/update-ladders.yml
+++ b/.github/workflows/update-ladders.yml
@@ -7,6 +7,10 @@ on:
     - cron: '0 11,23 * * *'  # 11 UTC = 9 PM AEST, 23 UTC = 9 AM AEST
   workflow_dispatch: # Allow manual triggers
 
+# Add permissions for the GITHUB_TOKEN
+permissions:
+  contents: write  # Allow writing to repository contents
+
 jobs:
   update-ladders:
     runs-on: ubuntu-latest
